更新footer下的备案号
之前是直接固定，现在可以在NexT主题配置里面进行修改，并且修改了大部分文章里面更多标签的位置

--- a/source/_posts/100.md
+++ b/source/_posts/100.md
@@ -4,7 +4,9 @@ categories: 技术
 date: 2017-06-30 11:05:23
 tags: [微信小程序, Toast]
 ---
-> 目前微信小程序官方的交互反馈API的提示框什么的都达不到我想要的简易效果，就自己简单写了一个。<!--more-->
+> 目前微信小程序官方的交互反馈API的提示框什么的都达不到我想要的简易效果，就自己简单写了一个。
+
+<!--more-->
 
 demo地址：[https://github.com/smk17/wxToast](https://github.com/smk17/wxToast)
 
