--- a/source/_posts/2.md
+++ b/source/_posts/2.md
@@ -12,11 +12,11 @@ tags:
 date: 2014-02-02 06:02:43
 updated: 2014-02-02 06:02:43
 ---
-> 这篇文章是我在安装好windows server 2008 R2系统后，对如何配置才能更好适合个人使用的一些总结，希望对大家有点用。<!--more-->
+> 这篇文章是我在安装好windows server 2008 R2系统后，对如何配置才能更好适合个人使用的一些总结，希望对大家有点用。
 
 # 如何把它变成熟悉的win7界面
 > 对于我来说，看惯了win7的界面，对windows server 2008 R2的那个单调界面非常不爽，于是，进行对win2008进行了一系列的配置，终于把它变成熟悉的win7界面。
-
+<!--more-->
 1,、打开 `服务管理器` ，在主界面找到 `功能摘要` ，点击添加功能，在弹出的窗体中找到 `桌面体验` 这一项，打上勾，按下一步，连续按几下，最后会提示要重启，重启后，在桌面右击，熟悉的 `个性化` 出来啦！！！
 2、开启THEMES服务：运行－services.msc －找到Themes服务项，默认是禁用，改为自动。
 `PS：AREO透明效果得显卡支持才会有相应的颜色方案。 同时开启图片预览功能 `
