--- a/source/_posts/22.md
+++ b/source/_posts/22.md
@@ -8,7 +8,7 @@ tags: [总结,MySql]
 ~~~ shell
 #1045 - Access denied for user ‘root’@’localhost’ (using password: NO)
 ~~~
-解决方法：
+解决方法： <!--more-->
 phpMyAdmin 试图连接到 MySQL 服务器，但服务器拒绝连接。您应该检查 config.inc.php 中的主机、用户名和密码，并且确定这些信息与 MySQL 服务器的管理员所给出的信息一致。
 我想应该也是跟phpmyadmin里的配置有关，事实也是如此。
 打开 `config.inc.php` 里看到里面有两行就是问题的关键：
