--- a/source/_posts/47.md
+++ b/source/_posts/47.md
@@ -8,7 +8,7 @@ tags: [windows,配置,PHP,IIS]
 打开“控制面板”，然后单击启动 “添加/删除程序”， 在弹出的对话框中选择 “添加/删除Windows组件”，在Windows组件向导对话框中选中“Internet信息服务（IIS）”，然后单击“下一步”，按向导指示，完成对IIS的安装。
 {% qnimg 47/01.jpg title:图1—windows组件向导1 alt:图1—windows组件向导1 'class:full-image' %}
 {% qnimg 47/02.jpg title:图2—windows组件向导2 alt:图2—windows组件向导2 'class:full-image' %}
-
+<!--more-->
 ## 启动Internet信息服务（IIS）
 
 Internet信息服务简称为IIS，单击Windows开始菜单---所有程序---管理工具---Internet信息服务（IIS）管理器，即可启动“Internet信息服务”管理工具（如图3）
