--- a/source/_posts/66.md
+++ b/source/_posts/66.md
@@ -4,7 +4,9 @@ categories: 技术
 date: 2016-10-31 18:00:56
 tags: [Windows, MacOS]
 ---
-> 作为一个喜欢一个屏幕一部电脑就可以干所有事情的童孩，在使用了大半年Mac OS后又因各种原因逼迫用会windows并且最后导致经常在两个系统之间不停切换，这期间在Mac OS使用Parallels Desktop 来使用windows或者在windows使用vmware来使用Mac OS都不能让我满意，最后就想到使用远程桌面来使用，以下是教程。<!--more-->
+> 作为一个喜欢一个屏幕一部电脑就可以干所有事情的童孩，在使用了大半年Mac OS后又因各种原因逼迫用会windows并且最后导致经常在两个系统之间不停切换，这期间在Mac OS使用Parallels Desktop 来使用windows或者在windows使用vmware来使用Mac OS都不能让我满意，最后就想到使用远程桌面来使用，以下是教程。
+
+<!--more-->
 
 ### 在MacOS开启屏幕共享
 系统偏好设置-共享-勾选“屏幕共享”，然后在电脑设置—VNC显示程序可以使用密码控制屏幕输入8位密码，并输入登录使用的密码允许设置，这样就可以通过其它PC或Mac上的VNC Viewer来连接这台Msc进行远程控制了。（具体操作如下图）
