--- a/source/_posts/7.md
+++ b/source/_posts/7.md
@@ -3,8 +3,9 @@ date: 2014-02-25 09:33:57
 categories: 技术
 tags: [嵌入式,龙芯培训,QT,sqlite3,总结]
 ---
+{% note danger %}
 开发环境：Qt Creator 2.8.1Based on Qt 5.0.2 (GCC 4.8.2, 32 bit)
-
+{% endnote %}
 问题1：编译无错误，在执行时终端出现以下字母：<!--more-->
 ~~~ shell
 QSqlDatabasePrivate::addDatabase: duplicate connection name 'qt_sql_default_connection', old connection removed
