--- a/source/_posts/8.md
+++ b/source/_posts/8.md
@@ -9,7 +9,8 @@ linux内核版本：3.0
 mipsel-linux-gcc版本：4.3.0
 {% endnote %}
 
-编写hello.c<!--more-->
+编写 `hello.c`
+<!--more-->
 ~~~ cpp
 /*************************************************************************
     > File Name: hello.c
