--- a/source/_posts/87.md
+++ b/source/_posts/87.md
@@ -4,7 +4,7 @@ categories: 作品
 date: 2016-10-20 16:55:51
 tags: [DoNet]
 ---
-> 之前公司要求的温湿度模块终于出来了，但是一个个测试太麻烦，于是和另一个同事一起做了这个“温湿度测试软件”，他负责开发终端我负责数据显示与处理。<!--more-->
+> 之前公司要求的温湿度模块终于出来了，但是一个个测试太麻烦，于是和另一个同事一起做了这个“温湿度测试软件”，他负责开发终端我负责数据显示与处理。
 
 ### 介绍
 目前最终版效果如下：<!--more-->
