--- a/source/_posts/88.md
+++ b/source/_posts/88.md
@@ -4,11 +4,11 @@ categories: 技术
 date: 2016-10-21 13:05:53
 tags: [ReactNative]
 ---
-> 正式开始学习React Native,其中遇到的各种坑将汇总于此~<!--more-->
+> 正式开始学习React Native,其中遇到的各种坑将汇总于此~
 
 ### 问题反馈
-#### 1.出现“com.android.ddmlib.InstallException: 
-   Failed to establish session react-native”，详情如下：
+#### 1.出现“com.android.ddmlib.InstallException:
+   Failed to establish session react-native”，详情如下：<!--more-->
    ![1](88/1.png)
    {% qnimg 88/1.png title:图1 alt:图1 %}
    解决方法：
