--- a/source/_posts/89.md
+++ b/source/_posts/89.md
@@ -5,11 +5,11 @@ date: 2016-10-21 16:25:37
 tags: [Hexo,置顶]
 
 ---
-> 博客里面总改有些文章要置顶的~~<!--more-->
+> 博客里面总改有些文章要置顶的~~
 
 文章参考了[这里](http://www.yuedongxu.cn/wod/)
 
-用以下代码替换掉你Hexo博客目录下node_modules/hexo-generator-index/lib/generator.js里的代码
+用以下代码替换掉你Hexo博客目录下 `node_modules/hexo-generator-index/lib/generator.js` 里的代码:<!--more-->
 ``` js
 'use strict';
 
