--- a/source/_posts/90.md
+++ b/source/_posts/90.md
@@ -4,11 +4,11 @@ categories: 技术
 date: 2016-11-05 21:04:39
 tags: [leancloud, 微信小程序]
 ---
-微信小程序公测后，就立刻尝试了，使用APPID的项目，在进行网络请求就有了域名限制了~<!--more-->
+微信小程序公测后，就立刻尝试了，使用APPID的项目，在进行网络请求就有了域名限制了~
 
 具体的使用方法直接看(leancloud官方文档)[https://leancloud.cn/docs/weapp.html]
 
-这里说的，就是微信小程序后端域名设置不当会出现的错误，该错误如下：
+这里说的，就是微信小程序后端域名设置不当会出现的错误，该错误如下：<!--more-->
 {% qnimg 90/1.png title:图1 alt:图1 %}
 
 解决方法：
