--- a/source/_posts/92.md
+++ b/source/_posts/92.md
@@ -4,10 +4,10 @@ categories: 技术
 date: 2016-11-18 09:58:14
 tags: [ReactNative, 启动页]
 ---
-> 一个APP最先应该有个启动页，这里简单介绍如何创建一个启动页~<!--more-->
+> 一个APP最先应该有个启动页，这里简单介绍如何创建一个启动页~
 
 ### 下载源码
-本文章示例可以通过以下命令下载：
+本文章示例可以通过以下命令下载：<!--more-->
 
 ~~~ shell
 git clone -b SplashScreen https://github.com/sengmitnick/SMKProject.git
