--- a/source/_posts/94.md
+++ b/source/_posts/94.md
@@ -4,10 +4,11 @@ categories: 作品
 date: 2016-12-20 15:15:38
 tags: [html5,小游戏]
 ---
-> 通过html5，canvas，JavaScript编写一个小游戏 <!--more-->
+> 通过html5，canvas，JavaScript编写一个小游戏
 > 简单设计：初始界面只有四个星球，一飞碟围着第一个星球旋转，当点击该星球时，飞碟以所在位置与星球球心连成的直线路径以匀速发射，直到碰到第二个星球后，停止并依附第二个星球旋转，反之则游戏结束，以此类推，直到飞碟以第四个星球旋转则游戏胜利并结束。
 > 进阶设计：以简单设计为基础，不断有新的星球出现，并且每成功碰到下一个星球记一次份，设置计分系统和通关目标。
 
+<!--more-->
 # 第一难点
 
 游戏初始有四个星球，研究飞碟在第一个星球发射的轨迹函数：
