--- a/source/_posts/99.md
+++ b/source/_posts/99.md
@@ -5,9 +5,9 @@ date: 2017-06-12 11:34:35
 tags: [ Hostker , Hexo , TravisCI ]
 ---
 
-> 本博客是放在Hostker服务器的（国内访问GitHub的速度实在不敢恭维），Hostker的应用只支持git和ftp，而且他的git有点怪，每次都要clone然后再push上去才不会出现奇怪的东西，所以是用不了Hexo deploy了，所以想到 push 后通过 [travis-ci](https://travis-ci.org/) 来自动git到Hostker上面，接下来就开工了…<!--more-->
+> 本博客是放在Hostker服务器的（国内访问GitHub的速度实在不敢恭维），Hostker的应用只支持git和ftp，而且他的git有点怪，每次都要clone然后再push上去才不会出现奇怪的东西，所以是用不了Hexo deploy了，所以想到 push 后通过 [travis-ci](https://travis-ci.org/) 来自动git到Hostker上面，接下来就开工了…
 
-
+<!--more-->
 #  Hostker
 
 ​	Hostker是[九零创新实验室](https://www.90.cx/)做的服务器，我2012在他们弄了Hostker就开始用了，历经这么多年现在貌似只能是老用户可以用了，反正现在我是找不到注册入口了...
