--- a/source/_posts/96.md
+++ b/source/_posts/96.md
@@ -6,11 +6,11 @@ tags: [微信小程序]
 ---
 
 > 城市切换是大多数app的必备功能，下面是一个基于微信小程序开发的demo。该demo继承于[微信小程序实用组件：城市切换](http://www.wxapp-union.com/thread-1644-1-1.html)，更换了里面内置的数据源（因为使用后发现好几个城市没有，居然连上海都没有也是醉了），添加搜索功能。
-<!--more-->
+
 
 ### 下载源码
 
-本文章示例可以通过以下命令下载：
+本文章示例可以通过以下命令下载：<!--more-->
 
 ~~~ shell
 git clone https://github.com/smk17/switchcity.git
